--- a/app/css/arethusa.scss
+++ b/app/css/arethusa.scss
@@ -789,6 +789,10 @@ input.warn {
   overflow: auto;
 }
 
+.gridster .gridster-preview-holder{
+  background: rgb(219, 219, 219);
+}
+
 
 /***************************************************************************
  *                               Animations                                *
