--- a/app/templates/arethusa.core/arethusa_grid.html
+++ b/app/templates/arethusa.core/arethusa_grid.html
@@ -1,6 +1,9 @@
 <div gridster="grid.options">
   <ul>
-    <li gridster-item="item" ng-repeat="item in grid.items">
+    <li
+      gridster-item="item"
+      ng-style="item.style"
+      ng-repeat="item in grid.items">
       <plugin name="{{ item.plugin }}"></plugin>
     </li>
   </ul>
