Add slow fade animations

--- a/app/css/arethusa.scss
+++ b/app/css/arethusa.scss
@@ -808,4 +808,12 @@ input.warn {
   &.fast {
     @include transition-duration(250ms);
   }
+
+  &.slow {
+    @include transition-duration(750ms);
+  }
+
+  &.very-slow {
+    @include transition-duration(1250ms);
+  }
 }
