Add animation to globalSettingsPanel list

--- a/app/templates/arethusa.core/global_settings_panel.html
+++ b/app/templates/arethusa.core/global_settings_panel.html
@@ -4,6 +4,7 @@
   <div class="small-12 columns scrollable text">
     <ul class="no-list">
       <li
+        class="fade"
         ng-repeat="name in gS.settings | keys"
         ng-init="setting = gS.settings[name]">
         <div ng-switch="setting.type">
