--- a/app/templates/arethusa.core/global_settings_panel.html
+++ b/app/templates/arethusa.core/global_settings_panel.html
@@ -1,8 +1,7 @@
 <div>
-  <br/>
   <p class="text" translate="globalSettings.title"/>
   <div class="small-12 columns scrollable text">
-    <ul class="no-list">
+    <ul class="no-list in-columns" style="height: 200px">
       <li
         class="fade"
         ng-repeat="name in gS.settings | keys"
