--- a/app/templates/arethusa.core/grid_setting.html
+++ b/app/templates/arethusa.core/grid_setting.html
@@ -1,14 +1,16 @@
-<p class="text">
-  <span>Grid</span>
-  <span translate="settings"></span>
-</p>
-<ul class="no-list">
-  <li ng-repeat="(key, value) in settings">
-    <input
-      type="checkbox"
-      ng-model="settings[key]"/>
-    <label>
-      <span translate="grid.{{ key }}"/>
-    </label>
-  </li>
-</ul>
+<div style="display: inline-block">
+  <p class="text">
+    <span>Grid</span>
+    <span translate="settings"></span>
+  </p>
+  <ul class="no-list">
+    <li ng-repeat="(key, value) in settings">
+      <input
+        type="checkbox"
+        ng-model="settings[key]"/>
+      <label>
+        <span translate="grid.{{ key }}"/>
+      </label>
+    </li>
+  </ul>
+</div>
