Fix width of layoutSetting and colorizerSetting

--- a/app/templates/arethusa.core/colorizer_setting.html
+++ b/app/templates/arethusa.core/colorizer_setting.html
@@ -1,7 +1,7 @@
 <label>
   <span translate="{{ setting.label }}"/>
   <select
-    style="width: 10%"
+    style="width: 8rem"
     class="compact"
     ng-model="gS[setting.property]"
     ng-change="gS.applyColorizer()"
