--- a/app/css/arethusa.scss
+++ b/app/css/arethusa.scss
@@ -49,7 +49,11 @@ html, body {
 }
 
 .tree-canvas {
-  border: 1px solid rgb(216, 216, 216)
+  border: 1px solid rgb(216, 216, 216);
+}
+
+.no-border {
+  border: 0 !important;
 }
 
 .tree-settings {
