--- a/app/css/arethusa.scss
+++ b/app/css/arethusa.scss
@@ -802,6 +802,12 @@ input.warn {
   background: rgb(219, 219, 219);
 }
 
+.panel {
+  -webkit-box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
+  -moz-box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
+}
+
 /***************************************************************************
  *                               Animations                                *
  ***************************************************************************/
