--- a/app/css/arethusa.scss
+++ b/app/css/arethusa.scss
@@ -892,3 +892,5 @@ $gridster-resizer-size: #{$gridster-padding - 5px};
     @include transition-duration(1250ms);
   }
 }
+
+@import 'arethusa.tei';
